[package]
name = "nelst"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
log4rs = "0.12.0"
lazy_static = "1.4.0"
toml = "0.5.6"
tokio = { version = "1.14.0", features = ["full"] }
mio = { version = "0.7", features = ["os-poll", "tcp"] }
