[package]
name = "nelst"
version = "0.5.0"
edition = "2024"
rust-version = "1.92"
authors = ["NeLST Contributors"]
description = "Network Load and Security Test - ネットワークの負荷テストとセキュリティテストを行うCLIツール"
readme = "README.md"
license = "MIT"
keywords = ["network", "load-testing", "security", "port-scan", "benchmark"]
categories = ["command-line-utilities", "network-programming"]

[dependencies]
# CLI
clap = { version = "4", features = ["derive"] }

# 非同期ランタイム
tokio = { version = "1", features = ["full"] }

# 低レベルI/O
mio = { version = "1", features = ["os-poll", "net"] }

# シリアライズ
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

# ロギング・トレーシング
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# エラーハンドリング
anyhow = "1"
thiserror = "1"

# プログレス表示
indicatif = "0.17"

# 時間
chrono = { version = "0.4", features = ["serde"] }

# ディレクトリ
dirs = "5"

# HTTP クライアント
reqwest = { version = "0.12", default-features = false, features = [
    "json",
    "rustls-tls",
    "http2",
] }

# HTTP サーバ
hyper = { version = "1", features = ["full"] }
hyper-util = { version = "0.1", features = ["tokio"] }
http-body-util = "0.1"

# ランダム
rand = "0.8"

# Raw socket / パケット操作
pnet = "0.35"
socket2 = "0.5"

# SSL/TLS
rustls = { version = "0.23", features = ["ring"] }
x509-parser = "0.16"
webpki-roots = "0.26"
tokio-rustls = { version = "0.26", features = ["ring"] }

# システム
libc = "0.2"

# ICMP Ping
surge-ping = "0.8"

# DNS解決
hickory-resolver = "0.25"

[dev-dependencies]
# テスト用

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
